--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -3,3 +3,10 @@
   font-size: 4rem;
   letter-spacing: 2px;
 }
+
+.card-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
