--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,16 +1,34 @@
 .website-title{
   font-weight: 300;
-  font-size: 5rem;
-  letter-spacing: 2px;
+  font-size: 4rem;
+  letter-spacing: 2.5px;
 }
 
-.card-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.dashboard header {
+  margin: 25px 0px;
 }
 
-.time-updated{
-  float: right;
+.website-title strong{
+  font-weight: 400;
+}
+
+@media(min-width:1350px){
+  .card-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .website-title{
+    font-weight: 300;
+    font-size: 6rem;
+  }
+
+  .time-updated{
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 40px 100px;
+  }
 }
