--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,34 +1,55 @@
 .card {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   margin: 20px 0;
   max-width: 600px;
-  justify-content: space-between;
 }
 
 .palette-title{
-  font-size: 2.2rem;
+  font-size: 1.5rem;
   font-weight: 400;
 }
 
 .by{
   padding-top: 5px;
   font-weight: 300;
-  font-size: 1rem;
+  font-size: .8rem;
 }
 
 .box{
   background: #2C6FA4;
   font-weight: bold;
-  font-size: 1.1rem;
+  font-size: .8rem;
   margin-top: 20px;
   padding: 10px;
   text-align: center;
-  width: 150px;
+  width: 120px;
 }
 
 .box span{
   padding: 5px;
+}
+
+@media(min-width:650px){
+  .palette-title{
+    font-size: 2.2rem;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .by{
+    font-size: 1rem;
+  }
+
+  .box{
+    font-size: 1.1rem;
+    width: 150px;
+  }
 }
 
 @media(min-width:1350px){
