--- a/src/styles/colorpalette.css
+++ b/src/styles/colorpalette.css
@@ -1,9 +1,18 @@
 .color-palette{
+  align-self: center;
   display: flex;
   flex-direction: row;
+  min-height: 100px;
 }
 
 .color-strip{
-  height: auto;
-  width: 35px;
+  max-height: 125px;
+  width: 20px;
+}
+
+@media(min-width:650px){
+  .color-strip{
+    height: auto;
+    width: 35px;
+  }
 }
