--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,15 +1,26 @@
-.website-title{
-  font-weight: 300;
-  font-size: 4rem;
-  letter-spacing: 2.5px;
+.dashboard{
+  width: fit-content;
+  margin: auto;
 }
 
 .dashboard header {
   margin: 25px 0px;
 }
 
+.website-title{
+  font-weight: 300;
+  font-size: 2.5rem;
+  letter-spacing: 2.5px;
+}
+
 .website-title strong{
   font-weight: 400;
+}
+
+@media(min-width:650px){
+  .website-title{
+    font-size: 4rem;
+  }  
 }
 
 @media(min-width:1350px){
@@ -21,14 +32,13 @@
   }
 
   .website-title{
-    font-weight: 300;
     font-size: 6rem;
   }
 
   .time-updated{
-    position: absolute;
-    top: 0;
-    right: 0;
     padding: 40px 100px;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
 }
