--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 30px 0;
   max-width: 600px;
 }
 
@@ -11,23 +11,23 @@
   font-weight: 400;
 }
 
-.by{
-  padding-top: 5px;
+.made-by{
   font-weight: 300;
   font-size: .8rem;
+  padding-top: 5px;
 }
 
-.box{
+.views-and-votes{
   background: #2C6FA4;
-  font-weight: bold;
   font-size: .8rem;
+  font-weight: bold;
   margin-top: 20px;
   padding: 10px;
   text-align: center;
   width: 120px;
 }
 
-.box span{
+.views-and-votes span{
   padding: 5px;
 }
 
@@ -36,17 +36,11 @@
     font-size: 2.2rem;
   }
 
-  .card {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .by{
+  .made-by{
     font-size: 1rem;
   }
 
-  .box{
+  .views-and-votes{
     font-size: 1.1rem;
     width: 150px;
   }
