--- a/src/styles/colorpalette.css
+++ b/src/styles/colorpalette.css
@@ -2,17 +2,19 @@
   align-self: center;
   display: flex;
   flex-direction: row;
-  min-height: 100px;
+  height: 100px;
 }
 
 .color-strip{
-  max-height: 125px;
   width: 20px;
 }
 
 @media(min-width:650px){
+  .color-palette{
+    height: 125px;
+  }
+
   .color-strip{
-    height: auto;
     width: 35px;
   }
 }
